// Copyright 2019 The Exonum Team
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//   http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package exonum.examples.cryptocurrency;

import "types.proto";

// Wallet struct used to persist data within the service.
message Wallet {
  // Public key of the wallet owner.
  exonum.crypto.PublicKey pub_key = 1;
  // Name of the wallet owner.
  string name = 2;
  // Current balance.
  uint64 balance = 3;
}

// Transaction type for creating a new wallet.
message TxCreateWallet {
  // UTF-8 string with the owner's name.
  string name = 1;
}

// Transaction type for transferring tokens between two wallets.
message TxTransfer {
  // Public key of the receiver.
  exonum.crypto.PublicKey to = 1;
  // Number of tokens to transfer from sender's account to receiver's account.
  uint64 amount = 2;
  // Auxiliary number to guarantee non-idempotence of transactions.
  uint64 seed = 3;
}

// Cryptocurrency configuration.
message Config {}
